# models/Admin.js
@@ -1,0 +1,18 @@
+const { DataTypes } = require('sequelize');
+const sequelize = require('../config/db');
+
+const Admin = sequelize.define('Admin', {
+  username: {
+    type: DataTypes.STRING,
+    allowNull: false,
+    unique: true,
+  },
+  password: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  },
+}, {
+  timestamps: true,
+});
+
+module.exports = Admin;
